methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:6: error: not found: value nbPas
      for (i<-1 to nbPas)
                   ^MethodsArgs:13: error: not found: value nbPas
      for (i<-1 to nbPas)
                   ^